--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,9 @@
   ],
   "homepage": "",
   "dependencies": {
-    "angular": "angularjs#1.3.11",
+    "angular": "1.3.11",
     "bootstrap": "^3.3.6",
-    "angular-route": "1.3.11"
+    "angular-route": "1.3.11",
+    "angular-messages": "1.3.11"
   }
 }
